# monte-carlo-retirement

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  sample_config.csv  test_alloc_slider_fix.py  test_critical_bugs.py  test_slider_labels_clean.py  test_warning_bugs.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.streamlit/: config.toml
config/: defaults.py
data/: data_sources.md  loader.py
docs/: PREMIUM_FEATURES.md
input/: sample_config.csv
models/: asset_returns.py  inflation.py  portfolio.py  simulation.py  social_security.py  tax.py
tests/: test_docs.py  test_open_source_integrity.py  test_open_source_release.py  test_phase2_smoke.py  test_scaffold.py
utils/: charts.py  config_io.py  helpers.py  report_generator.py  verification.py
