[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "monte-carlo-retirement"
version = "1.0.0"
description = "Monte Carlo retirement simulation with tax-aware withdrawals, Social Security modeling, and multi-asset returns"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "cakesandcode"},
]
keywords = ["retirement", "monte-carlo", "simulation", "financial-planning", "tax"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.3",
    "scipy>=1.11.4",
    "matplotlib>=3.7.0",
    "python-docx>=1.1.0",
    "yfinance>=0.2.36",
    "pandas-datareader>=0.10.0",
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
    "openpyxl>=3.1.2",
    "xlsxwriter>=3.1.9",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/cakesandcode/monte-carlo-retirement"
Repository = "https://github.com/cakesandcode/monte-carlo-retirement"
Issues = "https://github.com/cakesandcode/monte-carlo-retirement/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
